# inspect-ai-48-repro

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
app/evals/: eval_foo.py
app/prompts/: foo.py
greet/evals/: eval_foo.py
