[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "inspect-ai-48-repro"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "inspect_ai @ git+https://github.com/UKGovernmentBEIS/inspect_ai@bca3ac87f47882bab71b970541af3f0a71112aa9",
    "openai==1.34.0"
]

[tool.hatch.build.targets.wheel]
packages = ["greet/app"]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.hatch.metadata]
allow-direct-references = true
